testsuite/poke.pkl/break-diag-1.pk
/* { dg-do compile } */

defun foo = void:
  {
   break;  /* { dg-error "" } */
  }
